@@ -9,36 +9,39 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.slmtecnologia.config.security.user.Permission.ADMIN_CREATE;
-import static com.slmtecnologia.config.security.user.Permission.ADMIN_DELETE;
-import static com.slmtecnologia.config.security.user.Permission.ADMIN_READ;
-import static com.slmtecnologia.config.security.user.Permission.ADMIN_UPDATE;
-import static com.slmtecnologia.config.security.user.Permission.MANAGER_CREATE;
-import static com.slmtecnologia.config.security.user.Permission.MANAGER_DELETE;
-import static com.slmtecnologia.config.security.user.Permission.MANAGER_READ;
-import static com.slmtecnologia.config.security.user.Permission.MANAGER_UPDATE;
+import static com.slmtecnologia.config.security.user.Permission.USER_CREATE;
+import static com.slmtecnologia.config.security.user.Permission.USER_DELETE;
+import static com.slmtecnologia.config.security.user.Permission.USER_READ;
+import static com.slmtecnologia.config.security.user.Permission.USER_UPDATE;
+import static com.slmtecnologia.config.security.user.Permission.PERSON_CREATE;
+import static com.slmtecnologia.config.security.user.Permission.PERSON_DELETE;
+import static com.slmtecnologia.config.security.user.Permission.PERSON_READ;
+import static com.slmtecnologia.config.security.user.Permission.PERSON_UPDATE;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE,
+                    USER_CREATE
+                    )
+    ),
     ADMIN(
             Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
+                    PERSON_READ,
+                    PERSON_UPDATE,
+                    PERSON_DELETE,
+                    PERSON_CREATE
             )
     ),
-    MANAGER(
+    PERSON(
             Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
+                    PERSON_READ,
+                    PERSON_UPDATE,
+                    PERSON_DELETE,
+                    PERSON_CREATE
             )
     );
 
